# push-all

./: .env  Cargo.toml  README.md
push-all-display/: package.json  pnpm-lock.yaml  release-keystore.jks
push-all-display/src/: App copy.tsx  App.tsx  db.ts  main.tsx  store.ts  utils.ts
push-all-display/src-tauri/: Cargo.toml  tauri.conf.json
push-all-display/src-tauri/capabilities/: default.json
push-all-display/src-tauri/icons/: icon.icns
push-all-display/src-tauri/src/: lib.rs  main.rs
push-all-server/: Cargo.toml
push-all-server/src/: main.rs
